career heading spacing fix

--- a/src/containers/careerNew/components/Landing/landing.scss
+++ b/src/containers/careerNew/components/Landing/landing.scss
@@ -46,7 +46,10 @@
             position: absolute;
             top: 50px;
             text-align: center;
-            width: 100%;
+            width: 80%;
+            margin: auto;
+            left: 0;
+            right: 0;
              .dept_card_heading{
                 font: normal normal normal 20px/25px $font-Lora;
                 letter-spacing: 0.4px;
@@ -54,12 +57,12 @@
                 opacity: 1;
                 top: 60px;
                 margin: 27px auto auto auto;
-                width: 90%;
-                padding: 0% 2% 0% 0%;
+                // width: 90%;
+                // padding: 0% 2% 0% 0%;
 
                 @media screen and (max-width: 992px) {
                     margin-top: 20px;
-                    width: 100%;
+                    // width: 100%;
                     font: normal normal normal 16px/25px $font-Lora;
                 }
 
@@ -74,7 +77,7 @@
                 color: $default;
                 opacity: 1;
                 margin-top: 5%;
-                padding: 0% 20% 0% 18%;
+                // padding: 0% 20% 0% 18%;
 
                 @media screen and (max-width: 992px) {
                     display: none;
@@ -86,6 +89,11 @@
                     margin-top: 1%;
                     line-height: 1.5;
                 }
+            }
+
+            @media screen and (max-width: 992px) {
+                width: 75%;
+                padding: 0px;
             }
         }  
     }
